--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
     <!-- Load animation and utilities first -->
     <script src="js/confetti.js"></script>
     <script src="js/confetti-fix.js"></script>
+    <script src="js/ensure-directories.js"></script>
     <!-- Script to handle sound issues -->
     <script>
         // Fix for missing sound files - pre-initialize basic sounds
