--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
-    
-    <!-- PWA Support -->
-    <link rel="manifest" href="/manifest.json">
-    
+      <!-- PWA Support -->
+    <link rel="manifest" href="manifest.json">
     <style>
         h1, h2, .welcome-banner h2 {
             font-family: 'Fredoka One', cursive;
@@ -422,12 +420,10 @@
         console.log('HTML loaded, initializing scripts');
         document.addEventListener('click', function(e) {
             console.log('Click detected on:', e.target);
-        }, false);
-
-        // Register the service worker
+        }, false);        // Register the service worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('./sw.js')
                     .then(registration => {
                         console.log('Service Worker registered with scope:', registration.scope);
                     })
